[package]
name = "lockmysol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lockmysol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
bytemuck = "1.4.0"
arrayref = "0.3.6"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
